# AICopilotFS

./: .gitignore  00_START_HERE_PROJECT_COMPLETE.md  ADVANCED_FEATURES.md  ADVANCED_PROCEDURES_DELIVERY_VERIFICATION.md  ADVANCED_PROCEDURES_IMPLEMENTATION_SUMMARY.md  ADVANCED_PROCEDURES_INTEGRATION_GUIDE.md  ADVANCED_SYSTEMS_INDEX.md  AICOPILOTFS_MULTI_AGENT_INDEX.md  AICopilotFS.code-workspace  AIRPORT_COLLISION_DESIGN.md  AIRPORT_SYSTEMS_DELIVERY.md  AIRPORT_SYSTEMS_INDEX.md  AIRPORT_SYSTEMS_MANIFEST.md  AIRPORT_SYSTEMS_REFERENCE.md  AIRPORT_SYSTEMS_SUMMARY.md  ANALYSIS_COMPLETE_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  BUILD.md  BUILD_COMPLETION_REPORT.md  BUILD_SUCCESS.md  CMakeLists.txt  COMPILATION_AND_STUB_COMPLETION_SUMMARY.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETE_OLLAMA_STUB_READY.md  COMPLETE_OLLAMA_STUB_SOURCE.md  COMPREHENSIVE_FUNCTIONALITY_VERIFICATION.md  CRITICAL_FUNCTIONS_TESTING_MAP.txt  DATABASE_IMPLEMENTATION_PHASE_1_2.md  DATABASE_INTEGRATION_ANALYSIS.md  DATABASE_INTEGRATION_DELIVERY_SUMMARY.md  DATABASE_INTEGRATION_INDEX.md  DATABASE_INTEGRATION_QUICK_REFERENCE.md  DATABASE_INTEGRATION_STATUS.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_INTEGRATION_TECHNICAL_REFERENCE.md  DELIVERABLES_SUMMARY.md  DELIVERY_COMPLETE.txt  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  (+121 more)
aicopilot/: README.md
aicopilot/examples/: advanced_example.cpp  main_example.cpp  sample_aircraft.cfg  sample_flight.FLT
aicopilot/include/: advanced_procedures.hpp  ai_pilot.h  aicopilot_types.h  aircraft_config.h  aircraft_profile.h  aircraft_systems.h  airport_data.hpp  airport_integration.hpp  airport_manager.h  airway_router.hpp  approach_system.h  atc_controller.h  atc_routing.hpp  collision_avoidance.hpp  config_parser.h  coordinate_utils.hpp  dynamic_flight_planning.hpp  elevation_data.h  error_handling.hpp  examples.hpp  helicopter_operations.h  input_validation.h  metar_parser.hpp  ml_decision_engine.hpp  ml_decision_system.h  ml_features.hpp  ml_learning.hpp  ml_models.hpp  navdata.h  navdata_database.hpp  navdata_loader.hpp  navdata_provider.h  navigation.h  ollama_client.h  performance_optimizer.hpp  preflight_procedures.h  runway_data.h  runway_database.h  runway_database.hpp  runway_database_prod.hpp  (+21 more)
aicopilot/src/: advanced_procedures.cpp  airway_router.cpp  airway_router_prod.cpp  dynamic_flight_planning.cpp  elevation_data.cpp  metar_parser.cpp  navdata_database.cpp  navdata_database_prod.cpp  performance_optimizer.cpp  preflight_procedures.cpp  runway_database_prod.cpp  runway_selector.cpp  speech_recognizer.cpp  srtm_loader.cpp  stabilized_approach.cpp  system_monitor.cpp  voice_input.cpp  voice_interpreter.cpp  voice_output.cpp  vspeeds.cpp  weather_data.cpp  weight_balance.cpp
aicopilot/src/ai/: ai_pilot.cpp
aicopilot/src/airport/: airport_integration.cpp  airport_manager.cpp
aicopilot/src/approach/: approach_system.cpp  runway_database.cpp
aicopilot/src/atc/: atc_controller.cpp  ollama_client.cpp  ollama_client.h  ollama_client_impl.cpp  ollama_client_stub.cpp
aicopilot/src/helicopter/: helicopter_operations.cpp
aicopilot/src/ml/: ml_decision_engine.cpp  ml_decision_system.cpp  ml_features.cpp  ml_learning.cpp  ml_models.cpp
aicopilot/src/navdata/: navdata_loader.cpp  navdata_providers.cpp
aicopilot/src/navigation/: navigation.cpp
aicopilot/src/parsers/: aircraft_config.cpp  config_parser.cpp
aicopilot/src/profiles/: aircraft_profile.cpp
aicopilot/src/simconnect/: simconnect_wrapper.cpp
aicopilot/src/systems/: aircraft_systems.cpp
aicopilot/src/terrain/: terrain_awareness.cpp  terrain_database.cpp
aicopilot/src/traffic/: traffic_system.cpp
aicopilot/src/voice/: voice_interface.cpp
aicopilot/src/weather/: weather_database.cpp  weather_system.cpp
aicopilot/tests/: integration_framework.cpp  integration_framework.hpp  integration_tests_flight_scenario.cpp  integration_tests_nav_planner.cpp  integration_tests_terrain_taws.cpp  integration_tests_weather_runway.cpp  phase2_tests.cpp  test_advanced_procedures.cpp  test_elevation.cpp  test_ml_system.cpp  test_navdata.cpp  test_navdata_prod.cpp  test_runway.cpp  test_voice_interface.cpp  test_weather.cpp
aicopilot/tests/mocks/: mock_databases.hpp  mock_simconnect.hpp
aicopilot/tests/phase1/: IMPLEMENTATION_STATUS.txt  PHASE1_TEST_SUMMARY.txt  README.md  database_validation_test.cpp  mock_databases.h  mock_simconnect.h  priority1_tests.cpp  test_framework_setup.cpp
aicopilot/tests/unit/: CMakeLists.txt  aircraft_systems_test.cpp  clearance_state_machine_test.cpp  collision_avoidance_test.cpp  ml_decision_system_test.cpp  navigation_test.cpp  terrain_awareness_csv_test.cpp  terrain_awareness_test.cpp  test_simconnect_stub.cpp  weather_system_test.cpp
aicopilot/tools/: terrain_csv_harness.cpp
data/runways/: runway_database.csv
data/weather/: sample_metars.txt
docs/: OLLAMA.md
